Enable experimental Byte Buddy features in Surefire